--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,18 @@ addons:
     organization: "apollo-rsps"
 
 after_success:
-  - ./gradlew jacocoTestReport
   - bash <(curl -s https://codecov.io/bash)
   - git fetch --unshallow
   - ./gradlew -Dsonar.host.url=https://sonarcloud.io -Dsonar.login="$SONAR_TOKEN" sonarqube
+  - openssl aes-256-cbc
+    -K $encrypted_18db87a19112_key
+    -iv $encrypted_18db87a19112_iv
+    -in gradle/config/github_deploy_key.enc -out gradle/config/github_deploy_key -d
+  - chmod 600 gradle/config/github_deploy_key
+  - eval $(ssh-agent -s)
+  - ssh-add gradle/config/github_deploy_key
+  - test $TRAVIS_BRANCH = "kotlin-experiment-docs" && gradle :docs:publishGhPages
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -18,13 +26,3 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-
-deploy:
-  repo: apollo-rsps/apollo-rsps.github.io
-  provider: pages
-  skip-cleanup: true
-  local-dir: docs/build/docs/html5
-  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
-  keep-history: true
-  on:
-    branch: kotlin-experiment-docs
