--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 plugins {
+    id 'org.ajoberstar.github-pages' version '1.5.1' apply(false)
+    id 'org.asciidoctor.gradle.asciidoctor' version '1.5.1' apply(false)
+    id 'org.asciidoctor.convert' version '1.5.3' apply(false)
     id 'org.jetbrains.kotlin.jvm' version '1.2.60' apply(false)
     id 'org.jetbrains.intellij' version '0.3.6' apply(false)
     id 'org.jmailen.kotlinter' version '1.16.0' apply(false)
